--- a/index.html
+++ b/index.html
@@ -714,7 +714,8 @@ You are welcome anytime to contact us through the web form on the provided link
   <!-- CONTACT-US -->
 
   <!-- OUR PARTNER START-->
-  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center pos align-items-center">
+
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-white float-start">Our Major Product</h4>
   <marquee width="100%" direction="left" class="rounded-3 col-12 p-3 bg-white container mx-auto"  scrollamount="10" >
@@ -736,7 +737,7 @@ You are welcome anytime to contact us through the web form on the provided link
     <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
