--- a/GrcSolution.html
+++ b/GrcSolution.html
@@ -321,7 +321,7 @@
                             <i class="fas fa-tasks fs-5  bg text-white p-3 rounded-3"></i>
                             <div class="d-flex flex-column justify-content-center ">
                                 <h4>150 Project</h4>
-                                <p class="fw-light lh-1">We Have Completed</p>
+                                <p class="fw-light lh-1">We Have Been Completed</p>
                             </div>
 
                         </div>
