--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -446,11 +446,7 @@
 
                     <div>
                         <p class="pt-3 col-lg-12 fs-6 fw-normal">
-                            An AI-base solution to observe activities inside the terminal area round the clock all
-                            seasons.
-
-                            Detecting and alerting for the people in the terminal area without Safety Helmets,
-                            Jackets, Masks, Gloves, etc.
+                            An AI-base solution for automatic detection of different types of container damages (e.g. Dents. Bends, Rusting, Corrosion, etc), classifying it, measuring it, and finally comparing it.
 
 
                         </p>
