--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
   <!-- TOP -->
   <!-- NAVBAR -->
 
-  <div class="container-fluid main1 home mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img  m-0 p-0 w-100 position-absolute banner-img" alt="">
+  <div class="container-fluid  home  d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img w-100 h20" alt="">
   <!-- NAVBAR START -->
       <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -120,6 +120,7 @@
     <!-- NAVBAR END-->
   <!-- NAVBAR END-->
   
+
   <!-- MAIN SUB DIV START -->
   <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="col-12 text-white ">
@@ -127,7 +128,9 @@
     <h5 class="text-center">Home - About Us</h5>
   </div>
   </div>
-  
+  <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
+    <li>AI Product Solution</li>
+</button>  
   <!-- MAIN SUB DIV END -->
   
    </div>
@@ -265,21 +268,12 @@
   </div>
   <!-- OFFCANVAS -->
   <!-- HOME START -->
-  <div class="container-fluid d-flex m-0 flex-column justify-content-center align-items-center h10 my-5 pt-5 pb-5" id="home">
-    <div class="col-12 mx-auto d-flex justify-content-start flex-column  ">
-        <div class="d-flex col-12 flex-row justify-content-start pt-5 ">
-            <p class="pe-5 ">
-
-            </p>
-            <span class=""></span>
-          </div>
+  <div class="container-fluid d-flex m-0 flex-column justify-content-center align-items-center " >
+      
       <h2 class="display-2 text-start head-1 col-12 ">Time and Scope Committments for Project Deliveries
       </h2>
 
-     </div>
-<div class="col-12 about-container-1 container-fluid mt-5">
 
-</div>
   </div>
   <!-- HOME END -->
 
