--- a/buoylight.html
+++ b/buoylight.html
@@ -315,29 +315,35 @@
       <img src="Assets/images/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
-      <p class="fw-light  fs-5">
-        The product delivers laser-fast data capture, instantly recording container and vehicle details with unmatched
-        accuracy. It is optimized for deployment at gates, weighbridges, and quay cranes, improving terminal
-        productivity. The solution leverages AI precision, ensuring that data capture is error-free and accurate, making
-        it a reliable tool for terminals worldwide.
+      <p class="fw-light  fs-5 text-jus ">
+        An AI-base solution to capture Container and Vehicle information with laser fast speed and with astounding accuracy and easily integrates with Terminal Operating System (TOS) applications.
+<br>
+<br>
 
+        Deployed at In and Out Gates, at Weighbridges and at Quay Cranes increases. Cloud-Based Solution is easy to deploy and to manage. On-Premise options are also available.
+ <br>       
+<br>
+ Increases Terminal Productivities and Efficiencies manifold and Saves millions of dollars for the business. Highly Scalable. Designed for 247 Operating under toughest conditions.
       </p>
       <!--  -->
       <h2 class="fs-1 pb-3 col-org">Benefit</h2>
-      <p class="fw-light  fs-5">
-        Enhanced operational efficiency is achieved by automating data capture at gates, weighbridges, and cranes, which
-        improves terminal throughput. The solution also delivers significant cost savings by reducing errors and
-        optimizing operations, ultimately saving millions annually for businesses. Real-time data processing allows for
-        instant information access, enabling quick decision-making and minimizing delays across terminal operations.
+      <p class="fw-light   text-jus">
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Lightning-Fast Speed</span> <span>Captures container and vehicle information with laser-fast speed, enabling real-time processing without delays.</span></div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> High Accuracy</span> <span>Ensures outstanding accuracy in capturing data, reducing human errors and enhancing operational reliability.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Easy Integration </span><span>Seamlessly integrates with Terminal Operating System (TOS) applications, ensuring smooth workflow continuity.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Scalable Solution </span><span>Highly scalable, accommodating the growing needs of the business and increasing terminal efficiency over time.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Cloud-Based Convenience</span> <span>Cloud-based solution is easy to deploy, manage, and access from any location, providing flexibility and mobility.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> On-Premise Option </span><span> Also offers on-premise deployment for businesses with specific security or infrastructure needs.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Increased Productivity </span><span> Significantly boosts terminal productivity and operational efficiencies, ensuring smoother and faster operations.</span> </div>
+        <div class="benefit-item fs-5"><i class="fas fa-circle pe-lg-2 col-org"></i> <span class="fw-bold"> Cost Savings</span> <span> Helps businesses save millions by streamlining operations, reducing labor costs, and improving asset utilization.</span> </div>
       </p>
       <!--  -->
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Advantages:</h2>
       <p class="fw-light  fs-5">
-        The solution offers seamless integration with Terminal Operating Systems (TOS), ensuring efficient operations
-        across the terminal. It is highly scalable and adaptable to growing demands, with both cloud and on-premise
-        deployment options available. Designed for 24/7 reliability, it operates continuously under the toughest
-        conditions, ensuring uninterrupted performance and boosting operational efficiency.
+        This AI-powered solution offers significant advantages, transforming terminal operations. It captures container and vehicle information with lightning-fast speed and remarkable accuracy, ensuring seamless data processing with minimal human intervention. The system easily integrates with Terminal Operating Systems (TOS), facilitating smooth operational flow across platforms. Its cloud-based nature offers ease of deployment, management, and remote access, while on-premise options cater to specific security or infrastructure needs. The solution’s scalability accommodates growing terminal demands, increasing productivity and efficiency. Ultimately, it helps businesses save millions by streamlining processes, reducing costs, and enhancing overall performance, operating round the clock under even the toughest conditions.
+
+
         <br>
         <br>
 
@@ -448,9 +454,9 @@
   </div>
   <!-- FORM -->
   <!-- OUR PARTNER START-->
-  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+  <div class="container roun my-5 p-3   flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
-  <h4 class="text-white float-start">Our Major Product</h4>
+  <h4 class="text-dark float-start">Our Major Product</h4>
   <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
     <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
@@ -470,8 +476,7 @@
     <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+     <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
@@ -489,7 +494,7 @@
 
   </marquee>
   <div class="col-12">
-  <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
+  <h4 class="float-lg-end mt-3 text-dark">Almost 20+ Product we have</h4>
 </div>
 </div>
     
