--- a/buoyspot.html
+++ b/buoyspot.html
@@ -316,11 +316,12 @@
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
-        The product delivers laser-fast data capture, instantly recording container and vehicle details with unmatched
-        accuracy. It is optimized for deployment at gates, weighbridges, and quay cranes, improving terminal
-        productivity. The solution leverages AI precision, ensuring that data capture is error-free and accurate, making
-        it a reliable tool for terminals worldwide.
-
+        An AI-base solution for automatic detection of different types of container damages (e.g. Dents. Bends, Rusting, Corrosion, etc), classifying it, measuring it, and finally comparing it.
+<br>
+<br>
+        Ensures a significant reduction in false damage claims, ensuring vessel and workers safety both on the ground and aboard ship.
+        <br><br>    
+        Saves millions of dollars for terminal operators and vessel owners. Increases capacity, enhances terminal productivity and efficiency. Highly scalable. Designed for 247 operating under toughest conditions.
       </p>
       <!--  -->
       <h2 class="fs-1 pb-3 col-org">Benefit</h2>
@@ -441,9 +442,9 @@
   </div>
   <!-- FORM -->
   <!-- OUR PARTNER START-->
-  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+  <div class="container roun my-5 p-3   flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
-  <h4 class="text-white float-start">Our Major Product</h4>
+  <h4 class="text-dark float-start">Our Major Product</h4>
   <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
     <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
@@ -463,8 +464,7 @@
     <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+     <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
@@ -482,7 +482,7 @@
 
   </marquee>
   <div class="col-12">
-  <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
+  <h4 class="float-lg-end mt-3 text-dark">Almost 20+ Product we have</h4>
 </div>
 </div>
     
