--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
   <!-- NAVBAR -->
 
 <!-- MAIN 1 START -->
-<div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img home-img" alt="">
+<div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
+  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img w-100 h20" alt="">
 <!-- NAVBAR START -->
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -127,7 +127,9 @@
   <h5 class="text-center">Home - Contact </h5>
 </div>
 </div>
-
+<button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
+  <li>AI Product Solution</li>
+</button>  
 <!-- MAIN SUB DIV END -->
 
  </div>
