--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -317,11 +317,12 @@
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
-        The product delivers laser-fast data capture, instantly recording container and vehicle details with unmatched
-        accuracy. It is optimized for deployment at gates, weighbridges, and quay cranes, improving terminal
-        productivity. The solution leverages AI precision, ensuring that data capture is error-free and accurate, making
-        it a reliable tool for terminals worldwide.
+        An AI & Most Modern GIS Technologies based solution to analyze satellite imagery in unprecedented ways to derive various demographic and social metrics for a given location. Count objects & features, classify a city into different settlement types e.g. Apartment vs Villas vs Small Homes, Slums Vs Planned Settled areas, residential Vs industrial. Analyze Agriculture Land and Crop, Analysis of Land utilization Parks Vs Sports Fields Vs Water Ways.
 
+
+        Powerful Analysis to optimize your business Reach & Access. Ideal for Town Planners, for infrastructure and utility services planning for a district or a real-estate project. Geographical information system is on the most power tool to analyze the population and their trend. Our AI based solution Planet Scan is a AI GIS based geographical information system that has been developed on deep learning and machine learning methodology. This system works according to the selected region anywhere in world and provide the complete detailed information about people, gender, houses, market, shops, entertainment places, parks, playgrounds etc. and then assessment is also being done by this product. You can upload your data layers for analysis never seen before.
+        
+        Our solution is one of the most amazing solution which has been developed on AI technology by using the deep learning and machine learning techniques. For enquiry and demonstration, please email us at enquiry@perceptronglobal.com
       </p>
       <!--  -->
       <h2 class="fs-1 pb-3 col-org">Benefit</h2>
@@ -449,9 +450,9 @@
   </div>
   <!-- FORM -->
   <!-- OUR PARTNER START-->
-  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+  <div class="container roun my-5 p-3   flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
-  <h4 class="text-white float-start">Our Major Product</h4>
+  <h4 class="text-dark float-start">Our Major Product</h4>
   <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
     <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
@@ -471,8 +472,7 @@
     <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+     <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
@@ -490,7 +490,7 @@
 
   </marquee>
   <div class="col-12">
-  <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
+  <h4 class="float-lg-end mt-3 text-dark">Almost 20+ Product we have</h4>
 </div>
 </div>
     
