--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
   <!-- TOP -->
   <!-- NAVBAR -->
 
-  <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-18.jpg" class="m-0 p-0 w-100 home-img position-absolute banner-img" alt="">
+  <div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/banner-img-18.jpg" class="home-img w-100 h20" alt="">
   <!-- NAVBAR START -->
       <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -124,7 +124,9 @@
     <h5 class="text-center">Home - Portfolio</h5>
   </div>
   </div>
-  
+  <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
+    <li>AI Product Solution</li>
+</button>  
   <!-- MAIN SUB DIV END -->
   
    </div>
