--- a/index.html
+++ b/index.html
@@ -329,9 +329,9 @@
     </div>
   </div>
 
-  <div class="container-fluid who d-flex flex-lg-row flex-column py-5 my-5 m-0 justify-content-between">
+  <div class="container-fluid who  p-3 d-flex flex-lg-row flex-column p-0 m-0 justify-content-between">
 
-    <div class="col-lg-5 col-md-6 col-12  p-1 text-white1 d-flex flex-row position-relative align-items-center">
+    <div class="col-lg-5 col-md-6 col-12  text-white1 d-flex flex-row position-relative align-items-center">
       <img src="Assets/images/Pictures/testimonial.jpg" class="position-absolute img-fluid col-12 h-100  rounded-3 i22" alt="">
       <div class="col-lg-12 ps-lg-3 col-md-6 col-12 d-flex flex-row align-items-center">
         <h2 class="display-5 fw-normal col-lg-9 text-white1 i22"><span class="num">30</span>+ Years Experience Team of
@@ -340,8 +340,8 @@
       </div>
     </div>
  
-    <div class="col-lg-5 col-md-6 col-12 text-white1">
-      <swiper-container class="mySwiper col-12" pagination="true" autoplay-delay="3500">
+    <div class="col-lg-5 col-md-6  col-12 text-white1">
+      <swiper-container class="mySwiper col-12" pautoplay-delay="3500">
 
         <swiper-slide>
 
