--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
       <img src="Assets/images/Pictures/testimonial.jpg" class="img-fluid col-12 h-100  rounded-3 i22" alt="">
  
     </div>
-    <div class="col-lg-3  col-md-6 col-12 d-flex flex-column ">
+    <div class="col-lg-3 pt-lg-0 pt-3  col-md-6 col-12 d-flex flex-column ">
       <h2 class="display-6 fw-normal col-lg-12 text-white1"><span class="num">30</span>+ Years Experience Team of
         Consultants</h2>
         <p class="text-white fw-light py-4"> We are dedicated to delivering innovative solutions that drive success and optimize operations for our clients.</p>
         <div class="custom-navigation">
-          <button id="prevBtn">Prev</button>
-          <button id="nextBtn">Next</button>
+          <button id="prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
+          <button id="nextBtn"><i class="fa-solid fa-arrow-right"></i></button>
         </div>
       
    
@@ -355,13 +355,29 @@
         
           <div class="slider-item d-flex flex-column">
        <span ><i class="fa-solid fa-quote-left fs-1"></i></span>
-       <h5 class="fw-light fs-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, maxime.</h5>
+       <h5 class="fw-light fs-5"> The organization have a team of researchers, marketers , and experienced consultants, who have the extensive experience in their domains as well as the exposure of the international countries like UK, Europe, Middle East and Far East and implemented more than 1500 plus project .</h5>
        <span><i class="fa-solid fa-quote-right fs-1 float-end"></i></span>
           </div>
-          <div class="slider-item">Slide 2</div>
-          <div class="slider-item">Slide 3</div>
-          <div class="slider-item">Slide 4</div>
-          <div class="slider-item">Slide 5</div>
+          <div class="slider-item d-flex flex-column">
+            <span ><i class="fa-solid fa-quote-left fs-1"></i></span>
+            <h5 class="fw-light fs-5"> The organization have a team of researchers, marketers , and experienced consultants, who have the extensive experience in their domains as well as the exposure of the international countries like UK, Europe, Middle East and Far East and implemented more than 1500 plus project .</h5>
+            <span><i class="fa-solid fa-quote-right fs-1 float-end"></i></span>
+               </div>
+               <div class="slider-item d-flex flex-column">
+                <span ><i class="fa-solid fa-quote-left fs-1"></i></span>
+                <h5 class="fw-light fs-5"> The organization have a team of researchers, marketers , and experienced consultants, who have the extensive experience in their domains as well as the exposure of the international countries like UK, Europe, Middle East and Far East and implemented more than 1500 plus project .</h5>
+                <span><i class="fa-solid fa-quote-right fs-1 float-end"></i></span>
+                   </div>
+                   <div class="slider-item d-flex flex-column">
+                    <span ><i class="fa-solid fa-quote-left fs-1"></i></span>
+                    <h5 class="fw-light fs-5"> The organization have a team of researchers, marketers , and experienced consultants, who have the extensive experience in their domains as well as the exposure of the international countries like UK, Europe, Middle East and Far East and implemented more than 1500 plus project .</h5>
+                    <span><i class="fa-solid fa-quote-right fs-1 float-end"></i></span>
+                       </div>
+                       <div class="slider-item d-flex flex-column">
+                        <span ><i class="fa-solid fa-quote-left fs-1"></i></span>
+                        <h5 class="fw-light fs-5"> The organization have a team of researchers, marketers , and experienced consultants, who have the extensive experience in their domains as well as the exposure of the international countries like UK, Europe, Middle East and Far East and implemented more than 1500 plus project .</h5>
+                        <span><i class="fa-solid fa-quote-right fs-1 float-end"></i></span>
+                           </div>
         </div>
 
       </div>
