--- a/GrcSolution.html
+++ b/GrcSolution.html
@@ -39,6 +39,7 @@
     <!-- HOME START -->
     <div id="home1" class="home d-flex  align-items-center">
 <img src="Assets/images/Banner-Image/banner-img-3.jpg" class="home-img w-100" alt="">
+<!-- <img src="Assets/images/Banner-Image/banner-img-27.png" class="home-img w-100" alt=""> -->
      
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -303,7 +304,7 @@
                             We empower businesses with advanced AI technologies to streamline operations <span
                                 class="col-org">&</span> unlock new opportunities for growth and innovation.
                         </h2>
-                        <p class="pt-3 fw-lighter col-lg-11">
+                        <p class="pt-3  col-lg-11">
                             What began as a simple idea and a shared dream has evolved into a mission to empower
                             businesses with cutting-edge AI technologies. Since our founding, we've been dedicated to
                             driving innovation, streamlining operations, and enhancing decision-making.
