--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -38,7 +38,7 @@
     </a>
     <!-- HOME START -->
     <div id="home1" class="home d-flex  align-items-center">
-        <img src="Assets/images/Banner-Image/banner-img-5.jpg" class="home-img w-100" alt="">
+        <img src="Assets/images/Banner-Image/banner-img-26.png" class="home-img w-100" alt="">
 
         <!-- NAVBAR -->
            <!-- NAVBAR START -->
@@ -116,10 +116,10 @@
         <!-- NAVBAR -->
 
         <div class="container d-flex flex-lg-row  align-items-center flex-column">
-            <div class="col-lg-4">
-                <h2 class="text-white display-5 fw-bold">Web-App Development</h2>
+            <div class="col-lg-5">
+                <h2 class="text-white display-5 fw-bold">AI-Driven Web-App Development</h2>
             </div>
-            <div class="col-lg-3 d-flex flex-row align-items-end">
+            <div class="col-lg-2 d-flex flex-row align-items-end">
               
             </div>
 
@@ -132,7 +132,7 @@
         </div>
 
         <button class="btnhome d-flex fw-bold"><span class="pe-3">Home</span>
-            <li>Web-App Development</li>
+            <li>AI-Driven Web-App Development</li>
         </button>
 
     </div>
@@ -303,7 +303,7 @@
                             We empower businesses with advanced AI technologies to streamline operations <span
                                 class="col-org">&</span> unlock new opportunities for growth and innovation.
                         </h2>
-                        <p class="pt-3 fw-lighter col-lg-11">
+                        <p class="pt-3  col-lg-11">
                             What began as a simple idea and a shared dream has evolved into a mission to empower
                             businesses with cutting-edge AI technologies. Since our founding, we've been dedicated to
                             driving innovation, streamlining operations, and enhancing decision-making.
@@ -361,11 +361,11 @@
     <!-- AI PRODUCT SERVICE START -->
 
     <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
-        <div class="container d-flex flex-lg-row flex-column py-5">
+        <div class="container d-flex flex-lg-row flex-column justify-content-between py-5">
             <p class="pe-5 fs-4 text-white col-lg-5">AI-Driven Web & App
                 Development Solutions
             </p>
-            <p class="text-white col-lg-5 ms-auto fs-6 fw-lighter text-end">
+            <p class="text-white col-lg-6 fs-6 fw-normal text-end float-end">
                 AI-Driven AI Driven  Web & App Development Solutions
                 At AI-Driven AI Driven  Web & App Development Solutions, we specialize in creating secure and intelligent software
                 tailored to your business needs. Our solutions are designed to streamline operations.
