--- a/callmatics.html
+++ b/callmatics.html
@@ -497,59 +497,59 @@
 
   <!-- OUR PARTNER END-->
   <!-- FOOTER -->
+  <footer class=" footer pt-5 py-3">
 
-  <footer class=" pt-5">
-    <div class="container-fluid px-4 py-3">
+    <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
           <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
-          <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
+          <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
-          <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p> -->
+          <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white1">cybron@cybroninternational.com</a></p> -->
         </div>
 
         <div class="col-lg-3  col-12 col-md-6 mb-4 ps-lg-5">
-          <h3 class="mb-3 text-white">Usefull Links</h3>
+          <h3 class="mb-3 text-white1">Usefull Links</h3>
           <ul class="list-unstyled fs-6">
-            <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>
+            <li class="mb-1 "><a href="index.html" class="text-white1 fw-lighter text-decoration-none ">Home</a>
               <span class="navhover"></span>
             </li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
-            <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a>
+            <li class="mb-1"><a href="about.html" class="text-white1 fw-lighter text-decoration-none">About Us</a></li>
+            <li class="mb-1"><a href="portfolio.html" class="text-white1 fw-lighter text-decoration-none">Portfolio</a>
             </li>
             <li class="mb-1"><a href="Ai-Product-Solution.html"
-                class="text-white fw-lighter text-decoration-none">Service</a></li>
-            <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a>
+                class="text-white1 fw-lighter text-decoration-none">Service</a></li>
+            <li class="mb-1"><a href="contact.html" class="text-white1 fw-lighter text-decoration-none">Contact Us</a>
             </li>
           </ul>
 
         </div>
 
         <div class="col-lg-3 col-12 col-md-6 mb-4 ps-lg-5">
-          <h3 class="mb-3 text-white">Contact Us</h3>
+          <h3 class="mb-3 text-white1">Contact Us</h3>
           <ul class="list-unstyled fs-6">
             <li class="mb-1"><a
                 href="mailto:info@aisystemsoft.com?subject=Inquiry&body=Hello, I would like to know more about your services."
-                class="text-white fw-lighter text-decoration-none"> info@aisystemsoft.com</a></li>
-            <li class="mb-1 mt-2"><a href="tel:+16892764636" class="text-white fw-lighter text-decoration-none">+1 (689)
-                276-4636</a></li>
+                class="text-white1 fw-lighter text-decoration-none"> info@aisystemsoft.com</a></li>
+            <li class="mb-1 mt-2"><a href="tel:+16892764636" class="text-white1 fw-lighter text-decoration-none">+1
+                (689) 276-4636</a></li>
 
 
             <li class="mb-1 mt-2"><a href="https://www.google.com/maps/place/Conroy+Windermere,+FL-34786,+USA"
-                class="text-white fw-lighter text-decoration-none">
+                class="text-white1 fw-lighter text-decoration-none">
                 Conroy Windermere,<br> FL-34786, USA
               </a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-12 col-md-6 mb-4">
-          <h3 class="mb-3 text-white">Subscribe newsletter</h3>
+          <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
-              <button class="btn bg text-white" type="button">
+              <button class="btn bg text-white1" type="button">
                 <i class="fa fa-paper-plane" aria-hidden="true"></i>
               </button>
             </div>
@@ -559,7 +559,7 @@
 
 
     </div>
-    <p class="mb-0 mx-auto bg-col pb-3 text-white container-fluid p-3 text-center bottom-footer">© 2024 AiSystemSoft
+    <p class="mb-0 mx-auto   pb-3 text-white1 container bg rounded-3 border-0   p-3  text-center bottom-footer ">© 2024 AiSystemSoft
       All Rights Reserved</p>
   </footer>
 
