--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ You are welcome anytime to contact us through the web form on the provided link
   <!-- OUR PARTNER END-->
   <!-- FOOTER -->
 
-  <footer class=" footer pt-5">
+  <footer class=" footer pt-5 py-3">
 
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
@@ -805,7 +805,7 @@ You are welcome anytime to contact us through the web form on the provided link
 
 
     </div>
-    <p class="mb-0 mx-auto bg-col pb-3 text-white1 container-fluid p-3 text-center bottom-footer">© 2024 AiSystemSoft
+    <p class="mb-0 mx-auto   pb-3 text-white1 container bg rounded-3 border-0   p-3  text-center bottom-footer ">© 2024 AiSystemSoft
       All Rights Reserved</p>
   </footer>
 
