--- a/GrcSolution.html
+++ b/GrcSolution.html
@@ -38,8 +38,7 @@
     </a>
     <!-- HOME START -->
     <div id="home1" class="home d-flex  align-items-center">
-<img src="Assets/images/Banner-Image/banner-img-3.jpg" class="home-img w-100" alt="">
-<!-- <img src="Assets/images/Banner-Image/banner-img-27.png" class="home-img w-100" alt=""> -->
+<img src="Assets/images/Banner-Image/banner-img-27.png" class="home-img w-100" alt="">
      
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
