--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     </div>
     <div class="d-flex justify-content-end col-lg-4 mt-5 mt-lg-0">
-      <h4 class="text-end">Digitalized Enabled Strategies that Redefining Future.</h4>
+      <h4 class="text-end">Digitalized your Strategies & Redefining Future.</h4>
     </div>
   </div>
   <!-- Service START -->
@@ -584,7 +584,7 @@ You are welcome anytime to contact us through the web form on the provided link
 
     </div>
     <div class="d-flex text-dark1 justify-content-end col-lg-4 mt-5 mt-lg-0">
-      <h4 class="text-end text-capitalize">Connect with us for inquiries, partnerships, or support.</h4>
+      <h4 class="text-end text-capitalize">Establish Trust</h4>
     </div>
   </div>
   <div class="container-fluid who d-flex flex-lg-row flex-column justify-content-between  mx-0  py-5 contact-page">
@@ -592,9 +592,9 @@ You are welcome anytime to contact us through the web form on the provided link
     <div class="col-lg-5 d-flex flex-row align-items-center col-12  rounded ">
       <div class="col-12  d-flex flex-column px-1 rounded ">
 
-        <h2 class="fs-1  text-white1">Let’s working together</h2>
+        <h2 class="fs-1  text-white1">Let’s Plan Together</h2>
         <p class="col-text fs-6 py-4 fw-normal locte  text-white1">
-          Thank you for your interest in Attach Web Agency. We're excited to hear from you and discuss...us</span></p>
+          Design, Architect, Develop & Automate your business processes through AI. Increase your business productivity!</span></p>
         <div class="d-flex flex-column">
 
           <div
@@ -640,7 +640,7 @@ You are welcome anytime to contact us through the web form on the provided link
       </div>
     </div>
     <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
-      <h4 class="text-white1 text-end col-12 pb-3">We're here to assist you –<br> fill out the form below</h4>
+      <h4 class="text-white1 text-end col-12 pb-3">For Any Assitance –<br>Kindly Provide Your Information</h4>
       <form class="mt-3" id="form">
         <div class="row g-3">
           <div class="col-md-6">
@@ -695,7 +695,7 @@ You are welcome anytime to contact us through the web form on the provided link
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center pos align-items-center">
 
     <div class="d-flex flex-row justify-content-center flex-column">
-  <h4 class="text-white float-start">Our Major Product</h4>
+  <h4 class="text-white float-start">Our Products</h4>
   <marquee width="100%" direction="left" class="rounded-3 col-12 p-3 bg-white container mx-auto"  scrollamount="10" >
     <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
@@ -734,7 +734,7 @@ You are welcome anytime to contact us through the web form on the provided link
 
   </marquee>
   <div class="col-12">
-  <h4 class="float-end mt-3 text-white">Almost 20+ Product we have</h4>
+  <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
 </div>
 </div>
     
