--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -377,8 +377,8 @@
             <div class="col-lg-12 my-2 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
                 <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">01.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
-                    <img src="Assets/images/Products-images/buoylight-removebg-preview.png" class="img-fluid col-lg-8" alt="">
-                    <!-- <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">BuoyLIGHT <sup class="col-org">TM</sup> </h2> -->
+                    <!-- <img src="Assets/images/Products-images/buoylight-removebg-preview.png" class="img-fluid col-lg-8" alt=""> -->
+                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">BuoyLIGHT <sup class="col-org">TM</sup> </h2>
 
                     <div class="tags d-flex flex-row justify-content-between col-lg-7">
                         <p class="">AITracking</p>
