--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -184,7 +184,7 @@
                 </p>
             </div>
             <div class="col-12 mx-auto">
-                <img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+                <img src="Assets/images/Pictures/exp-img-1.jpg" class="img-fluid col-12" alt="">
             </div>
             <!-- Social Media Icons -->
             <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
