--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -666,20 +666,21 @@
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-white float-start">Our Major Product</h4>
-  <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
+  <marquee width="100%" direction="left" class="rounded-3 col-12 p-3 bg-white container mx-auto" scrollamount="10">
     <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
     <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-      <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
     <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5"
+      alt="">
     <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
@@ -692,14 +693,15 @@
     <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/safeacres.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5"
+      alt="">
     <img src="Assets/images/Products-images/safemalls.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/safeoffice.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
     <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-  
+
     <!-- 00 -->
 
   </marquee>
