--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -378,7 +378,7 @@
                 <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">01.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
                     <!-- <img src="Assets/images/Products-images/buoylight-removebg-preview.png" class="img-fluid col-lg-8" alt=""> -->
-                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">BuoyLIGHT <sup class="col-org">TM</sup> </h2>
+                    <h2 class="  pb-3 display-6 head-2 text-lg-start text-center">buoy<span class="dogwood">LIGHT</span> <sup class="col-org">TM</sup> </h2>
 
                     <div class="tags d-flex flex-row justify-content-between col-lg-7">
                         <p class="">AITracking</p>
@@ -434,7 +434,7 @@
             <div class="col-lg-12 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
                 <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">02.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
-                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">BuoySPOT <sup
+                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">buoySPOT <sup
                             class="col-org">TM</sup> </h2>
                     <div class="tags d-flex flex-row justify-content-between col-lg-7">
                         <p class="">AIDamage</p>
@@ -490,7 +490,7 @@
             <div class="col-lg-12 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
                 <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">03.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
-                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">BuoySPY <sup
+                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">buoySPY <sup
                             class="col-org">TM</sup> </h2>
                     <div class="tags d-flex flex-row justify-content-between col-lg-7">
                         <p class="">AISafety</p>
@@ -549,7 +549,7 @@
             <div class="col-lg-12 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
                 <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">04.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
-                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">CallmATICS <sup
+                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">callmATICS <sup
                             class="col-org">TM</sup> </h2>
                     <div class="tags d-flex flex-row justify-content-between col-lg-7">
                         <p class="">AIHelp</p>
@@ -666,45 +666,29 @@
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-white float-start">Our Major Product</h4>
-  <marquee width="100%" direction="left" class="rounded-3 col-12 p-3 bg-white container mx-auto" scrollamount="10">
-    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
-    <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
-    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5"
-      alt="">
-    <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safeacres.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5"
-      alt="">
-    <img src="Assets/images/Products-images/safemalls.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safeoffice.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+      <swiper-container class="mySwiper container bg-white" pagination="true" pagination-clickable="true" slides-per-view="3" autoplay-delay="1500"
+      space-between="30" free-mode="true">
+      <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-4 " alt="automan"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4" alt="buoylight"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4" alt="buoyspot"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4" alt="callmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4" alt="carmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
 
-    <!-- 00 -->
+      <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
 
-  </marquee>
+      <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4" alt="medbot"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4" alt="meddroid"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4" alt="mediatalks"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
+    </swiper-container>
   <div class="col-12">
   <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
 </div>
