--- a/contact.html
+++ b/contact.html
@@ -343,17 +343,17 @@
       <form class="mt-3" id="form">
         <div class="row g-3">
           <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required>
+            <input type="text" class="form-control " id="firstName" placeholder="First Name" required>
           </div>
           <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="lastName" placeholder="Last Name" required>
+            <input type="text" class="form-control " id="lastName" placeholder="Last Name" required>
           </div>
           <div class="col-md-6">
              <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum ">
           </div>
 
           <div class="col-md-6">
-            <input type="email" class="form-control form-control1" id="email" placeholder="Your Email" required>
+            <input type="email" class="form-control " id="email" placeholder="Your Email" required>
           </div>
           <div class="col-md-12">
             <select class="form-select" id="queryTopic" aria-label="Default select example">
@@ -367,7 +367,7 @@
 
           </div>
           <div class="col-12">
-            <textarea class="form-control form-control1" id="message" rows="4"
+            <textarea class="form-control " id="message" rows="4"
               placeholder="Write your message here..."></textarea>
           </div>
           <div class="col-12 text-center mb-5">
