--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
     <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
       <h4 class="text-white1 text-end col-12 pb-3">For Any Assitance –<br>Kindly Provide Your Information</h4>
-      <form class="mt-3" id="form">
+      <form class="mt-5" id="form">
         <div class="row g-3">
           <div class="col-md-6">
             <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required>
@@ -676,15 +676,16 @@
           <div class="col-md-6">
             <input type="text" class="form-control form-control1" id="lastName" placeholder="Last Name" required>
           </div>
-          <div class="col-md-6">
-            <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum ">
-          </div>
+
 
           <div class="col-md-6">
-            <input type="email" class="form-control form-control1" id="email" placeholder="Your Email" required>
+            <input type="email" class="form-control form-control1 " id="email" placeholder="Your Email" required>
+          </div>
+          <div class="col-md-6 pt-2 ">
+            <input id="phone" type="tel" class="mb-3 pt-1 col-12 mb-3 phonenum form-control1">
           </div>
           <div class="col-md-12">
-            <select class="form-select" id="queryTopic" aria-label="Default select example">
+            <select class="form-select form-control1" id="queryTopic" aria-label="Default select example">
 
               <option value="AI Products & Solutions">AI Products & Solutions</option>
               <option value="GRC Services">GRC Services</option>
