--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
         <img src="Assets/images/Pictures/why-pic-1.jpg" class="img-fluid col-12" alt="">
       </div>
       <div class="col-lg-3 mt-4">
-        <img src="Assets/images/Pictures/why-pic-2.png" class="img-fluid col-12" alt="">
+        <img src="Assets/images/Pictures/why-pic-2.jpg" class="img-fluid col-12" alt="">
 
       </div>
       <div class="col-lg-6 col-12 pt-4 ms-lg-5 d-flex flex-column justify-content-center">
