--- a/buoylight.html
+++ b/buoylight.html
@@ -415,39 +415,39 @@
       <p class="locte text-white text-center mx-auto fw-lighter ">Fill out the form to schedule a meeting and get the
         outline and other materials.</p>
 
-      <form class="mt-3 col-12 my-5">
-        <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg  ">
-          <div class="col-md-4 col-12">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required="">
+        <form class="mt-3 col-12 my-5 form_ser">
+          <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg  ">
+            <div class="col-md-4 col-12">
+              <input type="text" class="form-control  " id="firstName" placeholder="First Name" required="">
+            </div>
+            <div class="col-md-4">
+              <input type="email" class="form-control " id="lastName" placeholder="Email" required="">
+            </div>
+            <div class="col-md-4">
+              <input id="phone" type="tel" class="form-control phonenum col-6">
+  
+            </div>
+  
+            <div class="col-md-4">
+              <input type="text" class="form-control " id="firstName" placeholder="Address" required="">
+            </div>
+            <div class="col-md-4">
+              <input type="email" class="form-control " id="lastName" placeholder="Country" required="">
+            </div>
+            <div class="col-md-4">
+              <input type="date" class="form-control text-dark" id="lastName" required>
+            </div>
+  
+            <div class="col-12 text-center mb-2">
+              <button type="submit"
+                class="mt-3 mx-auto  btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+               SUBMIT
+                <i class="fa-solid fa-paper-plane icon-hover"></i>
+  
+              </button>
+            </div>
           </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control form-control1" id="lastName" placeholder="Email" required="">
-          </div>
-          <div class="col-md-4">
-            <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
-
-          </div>
-
-          <div class="col-md-4">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="Address" required="">
-          </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control form-control1" id="lastName" placeholder="Country" required="">
-          </div>
-          <div class="col-md-4">
-            <input type="date" class="form-control text-dark" id="lastName" required>
-          </div>
-
-          <div class="col-12 text-center mb-2">
-            <button type="submit"
-              class="mt-3 mx-auto  btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-              SUBMIT
-              <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-            </button>
-          </div>
-        </div>
-      </form>
+        </form>
     </div>
 
 
