--- a/buoyspot.html
+++ b/buoyspot.html
@@ -403,24 +403,24 @@
       <h2 class="text-center mb-3 mt-5 text-white fw-bolder mx-auto display-6">Schedule Meeting</h2>
       <p class="locte text-white text-center mx-auto fw-lighter ">Fill out the form to schedule a meeting and get the outline and other materials.</p>
 
-      <form class="mt-3 col-12 my-5">
+       <form class="mt-3 col-12 my-5 form_ser">
         <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg  ">
           <div class="col-md-4 col-12">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required="">
+            <input type="text" class="form-control  " id="firstName" placeholder="First Name" required="">
           </div>
           <div class="col-md-4">
-            <input type="email" class="form-control form-control1" id="lastName" placeholder="Email" required="">
+            <input type="email" class="form-control " id="lastName" placeholder="Email" required="">
           </div>
           <div class="col-md-4">
-            <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+            <input id="phone" type="tel" class="form-control phonenum col-6">
 
           </div>
 
           <div class="col-md-4">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="Address" required="">
+            <input type="text" class="form-control " id="firstName" placeholder="Address" required="">
           </div>
           <div class="col-md-4">
-            <input type="email" class="form-control form-control1" id="lastName" placeholder="Country" required="">
+            <input type="email" class="form-control " id="lastName" placeholder="Country" required="">
           </div>
           <div class="col-md-4">
             <input type="date" class="form-control text-dark" id="lastName" required>
